--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+:root {
+    --light-blue-color: #57CBD8;
+    --deep-navy-blue: #262834;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.bg-light-blue {
+    background: var(--light-blue-color);
+}
+.bg-deep-navy-blue {
+    background: var(--deep-navy-blue);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calculator__wrapper {
+    height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+.calculator {
+    background: #111117;
+    color: #fff;
+    width: 600px;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator .col-3:hover , .calculator .col-6:hover {
+    cursor: pointer;
+    opacity: .4;
 }
