--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,12 @@
     --deep-navy-blue: #262834;
 
 }
-
-
 .bg-light-blue {
     background: var(--light-blue-color);
 }
 .bg-deep-navy-blue {
     background: var(--deep-navy-blue);
 }
-
 .calculator__wrapper {
     height: 100vh;
 }
@@ -30,3 +27,19 @@
     cursor: pointer;
     opacity: .4;
 }
+
+@media only screen and (max-width: 767px ) {
+    .calculator {
+        width: 450px;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+}
+@media only screen and (max-width: 576px) {
+    .calculator {
+        width: 300px;
+        font-size: 1rem;
+        font-weight: 400;
+    }
+}
+
